linstaller (2.0.0~pre2-1) emily; urgency=low

  * linstaller: added ability to preseed from command-line;
  * core/config: support initial (file-less) configurations;
  * modules/widget_test: splitted tests; added sequence, progressbar_val,
    progressbar_sleep seeds;
  * core/module: support default items in cache().

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 15 Dec 2011 20:13:35 +0100

linstaller (2.0.0~pre1-1) emily; urgency=low

  * core/cli_frontend: new progressbar wrapper (class __ProgressBar).

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Tue, 13 Dec 2011 18:01:39 +0100

linstaller (1.52.4-1) emily; urgency=low

  * modules/partdisks: frontend: preseed root_noformat and swap_noformat
    if already formatted via edit_partitions.
    Reduces disk stress and should fix a crash when starting from an empty
    disk.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 08 Dec 2011 14:09:06 +0100

linstaller (1.52.3-1) emily; urgency=low

  * modules/partdisks: library: fixed going back after a partition
    table is created.
  * modules/partdisks: library: fixed object processing when writing
    to RAM.
  * modules/partdisks: frontend: do not show tableless disks in the
    automatic partitioner.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 08 Dec 2011 11:59:46 +0100

linstaller (1.52.2.2-2) emily; urgency=low

  * debian/control: do not restrict grub-pc: emily supports only i386 and amd64.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Mon, 28 Nov 2011 19:45:59 +0100

linstaller (1.52.2.2-1) emily; urgency=low

  * debian/control: linstaller-modules-base: depend on parted.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Mon, 28 Nov 2011 19:12:21 +0100

linstaller (1.52.2.1-1) emily; urgency=low

  * modules/partdisks: always declare choices[num] while printing
    partitions; pull self.changed obj from choices[num] instead of
    hardcoding to disk; do the partition table creation *before*